# wevtail

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: cli.rs  event.rs  filter.rs  main.rs  output.rs  wevt.rs
wix/: main.wxs
