[package]
name = "wevtail"
version = "0.1.0"
edition = "2024"
description = "tail -f for Windows event logs"
authors = ["Ldogg123"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ldogg123/wevtail"
keywords = ["windows", "eventlog", "tail", "cli", "evtx"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
jiff = "0.2"
owo-colors = "4.3"
quick-xml = "0.40"
rpassword = "7.5"
serde_json = "1.0"
zeroize = "1"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_EventLog",
    "Win32_System_Threading",
]

[profile.release]
lto = "thin"
strip = true

[package.metadata.wix]
eula = false
